# mod11-design-project-mindhash

./: .gitignore  README.md  build.gradle
core/assets/: ma_place.mtl
core/src/org/quokka/game/: LidarGame.java
core/src/org/quokka/lidar/: MyGdxGame.java
desktop/: build.gradle
desktop/assets/Skins/: glassy-ui.json
desktop/src/org/quokka/Screens/: IndexScreen.java  IndexScreen.kt  Screen3D.java
desktop/src/org/quokka/game/desktop/: DesktopLauncher.java  GameInitializer.kt  Launcher.kt  Testt.java
desktop/src/org/quokka/kotlin/: BagParser.kt  Database.kt  LidarReader.kt  OpenGLRender.kt
desktop/src/org/quokka/kotlin/Enviroment/: Space.kt  UIobserver.kt  gui.kt  legacyMethods.kt  main.kt  populator.kt
desktop/src/org/quokka/kotlin/config/: Config.kt  Constants.kt
desktop/src/org/quokka/kotlin/environment/: Compression.kt  Gui.kt  LegacyMethods.kt  Main.kt  Simgame.kt  Space.kt  TestyTest.kt  simulation.kt
desktop/src/org/quokka/kotlin/internals/: BagParser.kt  Buffer.kt  Database.kt  LidarReader.kt
desktop/src/org/quokka/lidar/desktop/: DesktopLauncher.java
desktop/src/org/quokka/test/: CompressionKtTest.kt
desktop/test/: CompressionKtTest.kt  DatabaseTests.kt  tests.kt
gradle/wrapper/: gradle-wrapper.properties
lidar_parser_rs/: Cargo.toml
lidar_parser_rs/src/: main.rs  parser.rs
manual/: MANUAL.md  README.md
