[package]
name = "lidar_parser"
version = "0.1.0"
authors = ["xynxynxyn <t.e.pinke@student.utwente.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgres = "0.17.2"
rosbag = "0.3.0"
anyhow = "1.0"
byteorder = "1"
r2d2_postgres = "0.16.0"
r2d2 = "0.8"
threadpool = "1.7.1"
clap = "2"
